--- a/minihospital/main/templates/layout.html
+++ b/minihospital/main/templates/layout.html
@@ -23,7 +23,7 @@
             
                             <div class="flex space-x-3">
                                 <img src="{% static 'image/schedule.png' %}" width="22" height="22" class="nav-icon brightness-200">
-                                <a href="{% url 'appoint:doc_appointment' %}" class="nav-text text-white text-[#494949] hover:text-[#15CDCB]">นัดหมายผู้ป่วย</a>
+                                <a href="#" class="nav-text text-white text-[#494949] hover:text-[#15CDCB]">นัดหมายผู้ป่วย</a>
                             </div>
 
                         </div>
