--- a/minihospital/appoint/templates/doc_appointment.html
+++ b/minihospital/appoint/templates/doc_appointment.html
@@ -13,11 +13,11 @@
 {% block content %}
 <div class="container-full flex flex-col justify-center items-center">
 
-    <div class="container m-5 flex space-x-6 justify-start items-center">
+    <!-- <div class="container m-5 flex space-x-6 justify-start items-center">
         <div class="text-[#909090] text-[20px] font-normal">{{ previous }}</div>
         <img class="" width="14" height="14" src="{% static 'image/play-button.png' %}" />
         <div class="text-center text-[#909090] text-[20px] font-normal">{{doc.prefix}} {{doc.user.first_name}} {{doc.user.last_name}}</div>
-    </div>
+    </div> -->
 
         <div class="container m-5 flex space-x-6 justify-center items-center p-5">
 
