--- a/minihospital/appoint/templates/doc_appointment_edit.html
+++ b/minihospital/appoint/templates/doc_appointment_edit.html
@@ -56,7 +56,7 @@
                         <div class="w-[350px] flex items-center relative">
                             <input 
                                     type="text" 
-                                    id="startDate" 
+                                    id="startDate"
                                     class="duration-300 transition ease-in-out delay-150 text-[16px] w-full rounded-full bg-[#EFEFEF] text-[#494949] px-5 py-3 pr-14 focus:outline-none focus:border-[#15cdcb] focus:ring-2 focus:ring-[#15cdcb]" 
                                     placeholder="dd/mm/yyyy" 
                                     oninput="updateDates()"
@@ -90,7 +90,7 @@
                 
             </div>
 
-            <script>
+            <!-- <script>
                 function sendLink() {
                     // รับค่าจากฟิลด์ startDate
                     const input = document.getElementById('startDate').value;
@@ -125,7 +125,7 @@
                     // เปลี่ยนหน้าไปยัง URL ใหม่
                     window.location.href = newUrl;
                 }
-            </script>
+            </script> -->
             
         </div>
         
@@ -162,14 +162,8 @@
                     {% endif %}
                 {% endfor %}
             </div>
-
-            {% comment %} <form id="appointmentForm" method="post">
-                {% csrf_token %}
-                <input type="hidden" name="appointment_time" id="appointment_time" value="">
-                <button type="submit" id="submitAppointment" class="hidden"></button>
-            </form> {% endcomment %}
             
-            
+ 
             <script>
                 document.querySelectorAll('.time-slot').forEach(slot => {
                     slot.addEventListener('click', function() {
@@ -190,7 +184,6 @@
                         console.log(`Selected appointment time: ${appointmentTime}`);
                         
                         // ส่งฟอร์มไปยัง server
-                        {% comment %} document.getElementById('submitAppointment').click(); {% endcomment %}
                     });
                 });
             </script>
@@ -209,7 +202,10 @@
                     <div class="p-10 bg-white rounded-[20px] shadow relative px-12">
                         <div class="text-start text-[#3d5279] text-[32px] font-semibold">แก้ไขการนัดหมาย</div>
                         <div class="text-start text-[#909090] text-base font-normal">กรุณาแก้ไขข้อมูลให้ถูกต้อง</div>
-                        <div class="flex space-x-16 mt-10">
+                        <div class="text-red-500 mb-4">
+                            {{ form.errors }}
+                        </div>
+                        <div class="flex space-x-12 mt-10 items-center">
                             <div class="w-[134px] h-[134px] bg-[#e1f6f5] rounded-full">
                                 <img class="rounded-full" width="134" height="134" src="{{ doc.doctor_image.url }}" />
                             </div>
@@ -222,16 +218,49 @@
                                         {{ doc.department }}
                                     </div>
                                 </div>
-                                <div id="validateDate" class="text-[#494949] text-base font-normal">วันที่นัดหมาย : {{appointment_date_str}}</div>
-                                <div id="validation_time" class="text-[#494949] text-base font-normal"></div>
+                                <div class="text-[#494949] text-base font-normal flex items-center flex items-center space-x-5 my-5">
+                                    <div>วันที่นัดหมาย : </div>
+                                    {{form.appointment_date}}
+                                </div>
+                                <div class="text-[#494949] text-base font-normal flex items-center space-x-5">
+                                    <div>เวลานัดหมาย : </div>
+                                    {{form.appointment_time }}
+                                </div>
                             </div>
                         </div>
 
-                        <div class="flex justify-between mt-10 mb-5 mx-10">
-                            <button type="delete" class="text-xl font-medium hover:bg-[#15CDCB] duration-300 hover:scale-110 transition ease-in-out delay-150 bg-transparent border border-[#15CDCB] flex justify-center rounded-full items-center w-[100px] h-[35px] p-[2px]">
-                               ยกเลิก
+                        <div class="flex justify-between items-center mt-10 mb-5 mx-10">
+                            <button type="button" onclick="deleteAppointment('{{current_date}}', '{{appointment_time}}')" class="text-xl p-3 px-12 font-medium hover:bg-[#15CDCB] duration-300 hover:scale-110 transition ease-in-out delay-150 bg-transparent border border-[#15CDCB] flex justify-center rounded-full items-center]">
+                               ยกเลิกนัดหมาย
                             </button>
-                            <button type="submit" class="bg-gradient-to-r from-[#5280e2] to-[#15cdcb] rounded-[50px] text-center text-white text-xl font-medium">
+                            <div>{{current_date}}</div>
+
+                            <script>
+                                function deleteAppointment(current_date, appointment_time) {
+                                    const csrfToken = '{{ csrf_token }}'; // Get CSRF token
+                                    const url = `/hopelife/doctor_appointment/{{current_date}}/${appointment_time}/edit/`;
+
+                                    fetch(url, {
+                                        method: 'DELETE',
+                                        headers: {
+                                            'X-CSRFToken': csrfToken, // Include CSRF token in header
+                                            'Content-Type': 'application/json'
+                                        }
+                                    })
+                                    .then(response => {
+                                        if (response.ok) {
+                                            alert('นัดหมายถูกยกเลิกเรียบร้อยแล้ว');
+                                            window.location.href = '/hopelife/doctor_appointment/{{current_date}}/'; // Redirect after delete
+
+                                        } else {
+                                            alert('ไม่สามารถยกเลิกนัดหมายได้');
+                                        }
+                                    })
+                                    .catch(error => console.error('Error:', error));
+                                }
+                            </script>
+
+                            <button type="submit" class="bg-gradient-to-r p-3 px-5 from-[#5280e2] to-[#15cdcb] rounded-[50px] text-center text-white text-xl font-medium">
                                 แก้ไขการนัดหมาย
                             </button>
                         </div>
